--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -29,15 +29,15 @@
 
     &:hover {
         .opinion__content {
-            display: block;
+            // display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             background-color: rgba(#000000, 0.5);
             
-                @include transit2 {
-                    display: flex;
-                    flex-direction: column;
+                @include tablets {
                     justify-content: center;
                     align-items: center;
-                    padding-top: rem(25px);
                 }
             }
         }
@@ -60,36 +60,28 @@
     padding: rem(30px) rem(30px) rem(30px) rem(20px);
     display: none;
 
-    @include tablets {
-        text-align: center;
-        padding-top: rem(25px);
-    }
-
-    
-
-
-
 }
 
 .opinion__title {
+    margin: 0;
     font-family: gagalinregular;
-    font-size: 14px;
+    font-size: rem(14px);
 
     @include tablets {
         margin: 0;
     }
 
     @include transit2 {
-        font-size: 24px;
+        font-size: rem(24px);
         font-weight: 400;
+        text-align: center;
     }
 }
 
 .opinion__text {
-    margin-top: rem(25px);
     line-height: 167%;
     font-family: ubuntulight;
-    font-size: 14px;
+    font-size: rem(14px);
 
     @include tablets {
         margin: 0;
@@ -103,12 +95,9 @@
 .opinion__btn {
     @include btn(#2f3234);
     width: rem(110px);
-    font-size: 13px;
+    font-size: rem(13px);
     padding-top: rem(10px);
     margin-top: rem(15px);
-
-
-
 
     &:hover {
         background-color: #1f2122;
@@ -116,7 +105,7 @@
 
     @include tablets {
         display: inline-block;
-        margin-top: rem(5px);
+        margin-top: rem(0px);
     }
 
     @include transit2 {
