--- a/CSS/section/style-greeting.scss
+++ b/CSS/section/style-greeting.scss
@@ -20,8 +20,6 @@
         margin-top: rem(13px);
         margin-right: auto;
 
-
-
         @include tablets {
             margin-left: rem(10px);
             margin-top: rem(15px);
@@ -56,8 +54,8 @@
 }
 
 .logo {
-    width: 92px;
-    height: 69px;
+    width: rem(92px);
+    height: rem(69px);
 }
 
 .logo__pic {
@@ -147,7 +145,6 @@
     }
 }
 
-
 .greeting {
     display: flex;
     justify-content: flex-start;
@@ -160,6 +157,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        justify-content: center;
         padding: 0 10%;
     }
 }
@@ -168,29 +166,21 @@
     max-width: rem(451px);
     max-height: rem(424px);
     width: 50%;
-    // height: 50%;
     margin-left: rem(95px);
     margin-top: rem(5px);
-    // flex-basis: 50%;
-    display: flex;
+    flex-shrink: 1;
 
     @include transit {
         margin-left: rem(0px);
         }
     
     @include tablets {
-        width: 100%;
-        padding: 0;
+        width: 87%;
+        padding: 0 rem(20px);
         margin-left: 0;
-        margin-top: rem(81px);
-        height: 100%;
+        margin-bottom: rem(30px);
+        height: 40%;
     }
-
-    @include tablets {
-        margin-top: rem(60px);
-        height: 100%;
-    }
-
 }
 
 .greeting__image {
@@ -206,7 +196,6 @@
     margin-right: auto;
     padding-left: rem(10px);
     padding-top: rem(130px);
-    // flex-basis: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -220,19 +209,14 @@
         margin-right: 0;
     }
 
-
-
-
     &-gagalin {
-
-        h2 {
             @include gagalin(#f9b43b);
             font-weight: 400;
             margin: 0;
             padding-top: rem(60px);
             line-height: 1;
-        }
     }
+
     &-lifehack {
             font-family: lifehackmedium;
             margin: 0;
@@ -247,6 +231,7 @@
 
             @include tablets {
                 margin-top: rem(-45px);
+                margin-bottom: rem(60px);
             }
     }
 }
