--- a/CSS/config/_mixins.scss
+++ b/CSS/config/_mixins.scss
@@ -11,7 +11,7 @@
     background-color: $bgcolor;
     border: none;
     border-radius: 5px;
-    height: rem(35px);
+    min-height: rem(35px);
     text-align: center;
     vertical-align: middle;
     padding: 10px 16px;
