--- a/CSS/layout/_adjustment.scss
+++ b/CSS/layout/_adjustment.scss
@@ -28,7 +28,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
+    // overflow: hidden;
 
     @include tablets {
         width: 95%;
