--- a/CSS/layout/_base.scss
+++ b/CSS/layout/_base.scss
@@ -26,8 +26,8 @@ body {
 }
 
 body, html {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     // overflow: hidden;
 }
 
