--- a/CSS/main.css
+++ b/CSS/main.css
@@ -66,8 +66,8 @@ body {
   box-sizing: border-box; }
 
 body, html {
-  height: 100vh;
-  width: 100vw; }
+  height: 100%;
+  width: 100%; }
 
 ul {
   margin: 0;
@@ -125,8 +125,7 @@ a {
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
-  flex-direction: column;
-  overflow: hidden; }
+  flex-direction: column; }
   @media screen and (max-width: 768px) {
     .container {
       width: 95%; } }
@@ -151,11 +150,11 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  height: 5.0625rem; }
+  height: 5.0625rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0; }
   .header__left {
     margin-left: 4.8125rem;
     margin-top: 0.8125rem;
@@ -233,7 +232,7 @@ a {
   background-color: #e45028;
   border: none;
   border-radius: 5px;
-  height: 2.1875rem;
+  min-height: 2.1875rem;
   text-align: center;
   vertical-align: middle;
   padding: 10px 16px;
@@ -295,11 +294,8 @@ a {
   -ms-flex-align: center;
   align-items: center;
   width: 100%;
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-  padding-bottom: 15%; }
+  padding-bottom: 15%;
+  padding-top: 5.0625rem; }
   @media screen and (max-width: 768px) {
     .greeting {
       -webkit-box-orient: vertical;
@@ -316,7 +312,7 @@ a {
       -webkit-justify-content: center;
       -ms-flex-pack: center;
       justify-content: center;
-      padding: 0 10%; } }
+      padding: 5.0625rem 10% 15%; } }
 
 .greeting__burger {
   max-width: 28.1875rem;
@@ -332,11 +328,10 @@ a {
       margin-left: 0rem; } }
   @media screen and (max-width: 768px) {
     .greeting__burger {
-      width: 87%;
+      width: 90%;
       padding: 0 1.25rem;
       margin-left: 0;
-      margin-bottom: 1.875rem;
-      height: 40%; } }
+      margin-bottom: 1.875rem; } }
 
 .greeting__image {
   width: 100%;
@@ -367,7 +362,6 @@ a {
     .greeting__words {
       width: 100%;
       padding: 0;
-      height: 30%;
       -webkit-box-align: center;
       -webkit-align-items: center;
       -ms-flex-align: center;
@@ -395,8 +389,7 @@ a {
     vertical-align: top; }
     @media screen and (max-width: 768px) {
       .greeting__words-lifehack {
-        margin-top: -2.8125rem;
-        margin-bottom: 3.75rem; } }
+        margin-top: -2.8125rem; } }
 
 .arrowbox {
   display: -webkit-box;
@@ -1245,7 +1238,7 @@ a {
   background-color: #2f3234;
   border: none;
   border-radius: 5px;
-  height: 2.1875rem;
+  min-height: 2.1875rem;
   text-align: center;
   vertical-align: middle;
   padding: 10px 16px;
