added slider section

--- a/CSS/config/_mixins.scss
+++ b/CSS/config/_mixins.scss
@@ -19,6 +19,7 @@
     font-family: ubuntumedium;
     color: #ffffff;
     line-height: 1;
+    cursor: pointer;
 }
 
 @mixin circle($width, $color) {
