--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -15,6 +15,7 @@ $phones: 480px;
 //section-styles
 @import "section/style-greeting.scss";
 @import "section/style-webest.scss";
+@import "section/style-slider.scss";
 @import "section/style-team.scss";
 @import "section/style-menu.scss";
 @import "section/style-feedback.scss";
