--- a/CSS/section/style-greeting.scss
+++ b/CSS/section/style-greeting.scss
@@ -226,6 +226,7 @@
     &-lifehack {
             font-family: lifehackmedium;
             margin: 0;
+            margin-top: rem(-45px);
             padding: 0;
             font-size: rem(65px);
             line-height: 0.97;
