--- a/CSS/main.css
+++ b/CSS/main.css
@@ -511,13 +511,13 @@ a {
     margin: 0;
     margin-bottom: 3.75rem;
     margin-top: 3.4375rem; }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 630px) {
       .webest-header__words {
         font-size: 3.125rem; } }
   @media screen and (max-width: 870px) {
     .webest-header {
       margin-top: 3.4375rem; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 630px) {
     .webest-header {
       margin-top: 0rem; } }
 
@@ -538,7 +538,7 @@ a {
   @media screen and (max-width: 768px) {
     .webest-content {
       margin: 6.25rem 1.875rem; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 630px) {
     .webest-content {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
@@ -577,7 +577,7 @@ a {
   @media screen and (max-width: 768px) {
     .bestpoint {
       margin-left: 0.625rem; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 630px) {
     .bestpoint {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
@@ -616,7 +616,7 @@ a {
   @media screen and (max-width: 768px) {
     .bestpoint__img {
       margin-bottom: 1.5625rem; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 630px) {
     .bestpoint__img {
       width: 9.375rem;
       margin: 0;
@@ -628,7 +628,7 @@ a {
 
 .bestpoint__content {
   text-align: center; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 630px) {
     .bestpoint__content {
       text-align: left;
       width: 70%; } }
@@ -656,7 +656,20 @@ a {
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
-  flex-direction: row; }
+  flex-direction: row;
+  position: relative; }
+
+.slider__left, .slider__right {
+  minwidth: 1.8125rem;
+  position: absolute; }
+
+.slider__left {
+  left: 0;
+  top: 50%; }
+
+.slider__right {
+  right: 0;
+  top: 50%; }
 
 .slider__main {
   display: -webkit-box;
@@ -669,15 +682,35 @@ a {
   align-items: center;
   height: 60%;
   position: relative; }
+  @media screen and (max-width: 768px) {
+    .slider__main {
+      height: 80%;
+      width: 80%;
+      padding: 0 1.25rem;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
+  @media screen and (max-width: 630px) {
+    .slider__main {
+      width: 100%;
+      height: 95%; } }
 
 .slider__image {
   max-width: 31.5625rem;
   max-height: 20.5625rem;
   width: 50%;
-  /* margin-top: rem(5px); */
   -webkit-flex-shrink: 1;
   -ms-flex-negative: 1;
   flex-shrink: 1; }
+  @media screen and (max-width: 768px) {
+    .slider__image {
+      width: 80%; } }
 
 .slider__composition {
   position: absolute;
@@ -732,6 +765,12 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
+  @media screen and (max-width: 768px) {
+    .slider__kcal {
+      bottom: initial;
+      top: 0;
+      left: initial;
+      right: 0; } }
 
 .slider__kettlebell {
   width: 3.75rem;
@@ -773,6 +812,13 @@ a {
   -ms-flex-direction: column;
   flex-direction: column;
   width: 50%; }
+  @media screen and (max-width: 768px) {
+    .slider__content {
+      width: 100%;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center; } }
 
 .slider__title {
   font-family: gagalinregular;
@@ -783,12 +829,24 @@ a {
   padding: 0;
   margin: 0;
   font-weight: 400; }
+  @media screen and (max-width: 768px) {
+    .slider__title {
+      text-align: center; } }
 
 .slider__desc {
   font-size: 0.875rem;
   line-height: 1.5rem;
   font-family: ubuntulight;
-  color: #ffffff; }
+  color: #ffffff;
+  padding-right: 1.8125rem; }
+  @media screen and (max-width: 768px) {
+    .slider__desc {
+      padding-right: 0;
+      width: 100%;
+      text-align: center; } }
+  @media screen and (max-width: 480px) {
+    .slider__desc {
+      margin-bottom: 1.5625rem; } }
 
 .slider__bottom {
   display: -webkit-box;
@@ -804,14 +862,24 @@ a {
   -webkit-align-items: baseline;
   -ms-flex-align: baseline;
   align-items: baseline; }
+  @media screen and (max-width: 480px) {
+    .slider__bottom {
+      -webkit-box-align: end;
+      -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+      align-items: flex-end; } }
 
 .slider__price {
   font-family: gagalinregular;
   font-size: 4.5rem;
   text-transform: uppercase;
   color: #e35028;
-  line-height: 4rem;
-  margin-right: 1.875rem; }
+  margin: 0;
+  margin-right: 1.875rem;
+  padding: 0; }
+  @media screen and (max-width: 480px) {
+    .slider__price {
+      line-height: 2rem; } }
   .slider__price:after {
     content: 'рублей';
     font-family: gagalinregular;
@@ -1828,6 +1896,9 @@ a {
   position: fixed;
   top: 97px;
   right: 37px; }
+  @media screen and (max-width: 768px) {
+    .dots {
+      display: none; } }
 
 .dots__list {
   margin-left: 30px; }
