working accordeon in team js

--- a/CSS/section/style-team.scss
+++ b/CSS/section/style-team.scss
@@ -114,6 +114,9 @@
 .teammates__desc{
     display: flex;
     height: rem(0px);
+    transform: scale(0);
+    transform-origin: 50% 0%;
+    transition: transform 0.5s;
     overflow: hidden;
 
     @include transit {
@@ -190,6 +193,7 @@
     +.teammates__desc {
         height: 23%;
         min-height: rem(120px);
+        transform: scale(1);
         overflow: visible;
     }
 }
