--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1101,6 +1101,17 @@ a {
   display: -ms-flexbox;
   display: flex;
   height: 0rem;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transform-origin: 50% 0%;
+  -ms-transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
   overflow: hidden; }
   @media screen and (max-width: 870px) {
     .teammates__desc {
@@ -1175,6 +1186,9 @@ a {
 .teammates__trigger_active + .teammates__desc {
   height: 23%;
   min-height: 7.5rem;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
   overflow: visible; }
 
 .menu-bg {
