--- a/CSS/main.css
+++ b/CSS/main.css
@@ -430,7 +430,9 @@ a {
   bottom: 0;
   left: 0;
   background-color: rgba(47, 50, 52, 0.95);
-  z-index: 100;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
   transform: scale(0);
@@ -1322,7 +1324,8 @@ a {
   padding: 3.75rem 2.1875rem; }
 
 .feedbacks {
-  background-color: #000000; }
+  background-color: #000000;
+  position: relative; }
 
 .opinion-container {
   display: -webkit-box;
@@ -1659,6 +1662,48 @@ a {
         display: inline-block;
         margin-top: 0.9375rem;
         width: 80%; } }
+
+.modal-bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(47, 50, 52, 0.95);
+  z-index: 10;
+  cursor: pointer;
+  display: none; }
+
+.modal {
+  background: #ffffff;
+  width: 90%;
+  border-radius: 5px;
+  position: fixed;
+  top: 35%;
+  left: 5%;
+  z-index: 15;
+  padding: 1.875rem 1.25rem;
+  opacity: 0;
+  display: none; }
+
+.modal__close {
+  position: absolute;
+  top: 5%;
+  right: 5%; }
+
+.modal__title {
+  font-size: 14px;
+  font-family: gagalinregular;
+  color: #2f3234;
+  padding: 0;
+  margin: 0; }
+
+.modal__text {
+  font-size: 14px;
+  font-family: ubuntulight;
+  color: #2f3234;
+  padding: 0;
+  line-height: 24px; }
 
 .order {
   background: url("../IMG7/order-texture.png") no-repeat center center, #000000 url("../IMG7/order-bg.png") no-repeat center center;
