--- a/CSS/section/style-greeting.scss
+++ b/CSS/section/style-greeting.scss
@@ -268,8 +268,10 @@
     bottom: 0;
     left: 0;
     background-color: rgba(#2f3234, 0.95);
+    width: 100%;
+    height: 100%;
 
-    z-index: 100;
+    z-index: 10;
 
     transform: scale(0);
     transition: transform 0.5s;
