--- a/CSS/section/style-menu.scss
+++ b/CSS/section/style-menu.scss
@@ -43,7 +43,6 @@
 .menu__item {
     display: flex;
     justify-content: flex-start;
-
 }
 
 .menu__namebg {
@@ -97,15 +96,37 @@
     }
 }
 
-.menu__desc {
+.menu__container {
+    width: rem(0px);
+    overflow: hidden;
+    transition: .5s;
+    flex-grow: 2;
+    // display: flex;
     background-color: rgba(#000000, 0.8);
-    padding: 0;
+}
+
+.menu__desc {
+    // background-color: rgba(#000000, 0.8);
+    // padding: 0;
     color: #ffffff;
     font-size: rem(14px);
     line-height: rem(24px);
     font-family: ubuntulight;
-    width: rem(0px);
-    overflow: hidden;
+
+    // min-width: rem(100px);
+    // min-width: rem(200px);
+    // width: 40vw;
+    // width: 100%;
+    // flex-grow: 1;
+    padding: rem(60px) rem(35px);
+    display: none;
+    // @include tablets { 
+    //     width: 55vw;
+    // }
+
+    // p {
+    //     width: 100%;
+    // }
 }
 
 .menu__trigger_active {
@@ -117,11 +138,18 @@
         }
     }
 
-    + .menu__desc {
-        min-width: rem(100px);
-        width: auto;
-        flex-grow: 1;
-        padding: rem(60px) rem(35px);
-    }
+    // + .menu__desc {
+    //     min-width: rem(100px);
+    //     width: 100%;
+    //     flex-grow: 1;
+    //     padding: rem(60px) rem(35px);
+    // }
+
+    // + .menu__container {
+    //     min-width: rem(100px);
+    //     width: 100%;
+    //     flex-grow: 1;
+    //     padding: rem(60px) rem(35px);
+    // }
 
 }
