--- a/CSS/main.css
+++ b/CSS/main.css
@@ -96,9 +96,21 @@ a {
   height: 100%;
   position: relative; }
 
+.onepage {
+  height: 100%;
+  min-height: 650px;
+  width: 100%; }
+
+.onepage__slider {
+  height: 100%;
+  min-height: 650px;
+  width: 100%;
+  overflow: hidden; }
+
 .maincontent {
   height: 100%;
-  min-height: 650px; }
+  min-height: 650px;
+  width: 100%; }
 
 .section {
   height: 100%;
@@ -134,10 +146,36 @@ a {
     .container {
       width: 95%; } }
 
+/*Plugin adjustment*/
+.onepage-pagination {
+  top: 15%;
+  right: 5%; }
+  .onepage-pagination li {
+    position: relative; }
+  .onepage-pagination li a::before {
+    background: #ffffff;
+    width: 5px;
+    height: 5px;
+    margin-top: 0px;
+    left: 12px; }
+  .onepage-pagination li a.active::before {
+    border: 1px solid white;
+    width: 15px;
+    height: 15px; }
+  .onepage-pagination li a.active::after {
+    content: '';
+    position: absolute;
+    background: #ffffff;
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+    margin-top: 1px;
+    left: 13px;
+    z-index: 100; }
+
 .greet-section {
   background: url("../IMG/texture.png") no-repeat center center, url("../IMG/texture.png") no-repeat center center, #000000 url("../IMG/video-bg.png") no-repeat center center;
   background-size: cover, cover;
-  position: relative;
   height: 100%;
   width: 100%; }
 
@@ -267,6 +305,13 @@ a {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex; } }
+  .hamburger-menu-active {
+    -webkit-transform: rotate(360deg) scale(0);
+    -ms-transform: rotate(360deg) scale(0);
+    transform: rotate(360deg) scale(0);
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s; }
 
 .hamburger-menu__bars, .hamburger-menu__bars:before, .hamburger-menu__bars:after {
   background: #fff;
@@ -663,27 +708,58 @@ a {
 
 .slider__left, .slider__right {
   minwidth: 1.8125rem;
-  position: absolute; }
+  position: absolute;
+  z-index: 200; }
 
 .slider__left {
-  left: 0;
+  left: 5%;
   top: 50%; }
 
 .slider__right {
-  right: 0;
+  right: 5%;
   top: 50%; }
+
+.slider__middle {
+  width: 90%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative; }
 
 .slider__main {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 60%;
-  position: relative; }
+  position: absolute;
+  width: 100%;
+  padding: 0 5%;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s; }
   @media screen and (max-width: 768px) {
     .slider__main {
       height: 80%;
@@ -693,15 +769,13 @@ a {
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center; } }
+      flex-direction: column; } }
   @media screen and (max-width: 630px) {
     .slider__main {
       width: 100%;
       height: 95%; } }
+  .slider__main-active {
+    opacity: 1; }
 
 .slider__image {
   max-width: 31.5625rem;
@@ -891,7 +965,8 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 50%; }
+  width: 50%;
+  padding-left: 5%; }
   @media screen and (max-width: 768px) {
     .slider__content {
       width: 100%;
@@ -967,15 +1042,17 @@ a {
     font-weight: 400;
     color: #e35028; }
 
-.arrow__left {
-  -webkit-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg); }
-
-.arrow__right {
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg); }
+.slider__arrow {
+  width: 1.8125rem;
+  height: 0.875rem; }
+  .slider__arrow-left {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg); }
+  .slider__arrow-right {
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg); }
 
 .team {
   background: #000000 url("../IMG4/team-bg.png") no-repeat center center;
@@ -1333,8 +1410,7 @@ a {
       color: #f9b43b; } }
 
 .feedbacks {
-  background-color: #000000;
-  position: relative; }
+  background-color: #000000; }
 
 .opinion-container {
   display: -webkit-box;
@@ -1345,7 +1421,8 @@ a {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  position: relative; }
 
 .opinion__img {
   width: 25%;
@@ -1736,8 +1813,7 @@ a {
   padding: 0;
   margin: 0;
   margin-bottom: 3.75rem;
-  margin-top: 4.0625rem;
-  /* margin-top: auto; */ }
+  margin-top: 4.0625rem; }
   @media screen and (max-width: 768px) {
     .order__title {
       text-align: center;
@@ -1926,10 +2002,18 @@ a {
 .map {
   background: #000000 url("../IMG8/map-bg.png") no-repeat center center;
   background-size: cover;
-  position: relative;
   height: 100%;
   width: 100%;
   color: #ffffff; }
+
+.map-bg {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
+.yandex-map {
+  width: 100%;
+  height: 100%; }
 
 .map-title {
   position: absolute;
