--- a/CSS/section/style-map.scss
+++ b/CSS/section/style-map.scss
@@ -1,15 +1,22 @@
 .map {
     background: #000000 url("../IMG8/map-bg.png") no-repeat center center;
     background-size: cover;
-    position: relative;
+    // position: relative;
     height: 100%;
     width: 100%;
     color: #ffffff;
 }
 
-// .map-bg {
-//     position: relative;
-// }
+.map-bg {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.yandex-map {
+    width: 100%;
+    height: 100%;
+}
 
 .map-title {
     position: absolute;
