--- a/CSS/section/style-slider.scss
+++ b/CSS/section/style-slider.scss
@@ -11,36 +11,72 @@
 .slider__left, .slider__right {
     minwidth: rem(29px);
     position: absolute;
+    z-index: 200;
 }
 
 .slider__left {
-    left: 0;
+    left: 5%;
     top: 50%;
 }
 
 .slider__right {
-    right: 0;
+    right: 5%;
     top: 50%;
+}
+
+.slider__middle{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // overflow: hidden;
+    position: relative;
+//     align-items: center;
+//     height: 60%;
+
+    // @include tablets {
+    //     height: 80%;
+    //     width: 80%;
+//         padding: 0 rem(20px);
+//         flex-direction: column;
+//         justify-content: center;
+    // }
+
+//         @include transit2 {
+//         width: 100%;
+//         height: 95%;
+//     }
 }
 
 
 .slider__main {
     display: flex;
+    flex-shrink: 0;
     align-items: center;
+    justify-content: center;
     height: 60%;
-    position: relative;
+    position: absolute;
+    width: 100%;
+    padding: 0 5%;
+    opacity: 0;
+    transition: opacity 0.5s;
 
     @include tablets {
         height: 80%;
         width: 80%;
         padding: 0 rem(20px);
         flex-direction: column;
-        justify-content: center;
+        
     }
 
-        @include transit2 {
+    @include transit2 {
         width: 100%;
         height: 95%;
+    }
+
+    &-active {
+        opacity: 1;
     }
 }
 
@@ -233,6 +269,7 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    padding-left: 5%;
 
     @include tablets {
         width: 100%;
@@ -302,13 +339,16 @@
 }
 
 
-.arrow {
-    &__left {
+.slider__arrow {
+    width: rem(29px);
+    height: rem(14px);
+
+    &-left {
         transform: rotate(90deg);
     }
     
-    &__right {
-        transform: rotate(-90deg);
+    &-right {
+        transform: rotate(-90deg)
     }
 }
 
