--- a/CSS/main.css
+++ b/CSS/main.css
@@ -96,17 +96,6 @@ a {
   height: 100%;
   position: relative; }
 
-.onepage {
-  height: 100%;
-  min-height: 650px;
-  width: 100%; }
-
-.onepage__slider {
-  height: 100%;
-  min-height: 650px;
-  width: 100%;
-  overflow: hidden; }
-
 .maincontent {
   height: 100%;
   min-height: 650px;
@@ -554,6 +543,7 @@ a {
     font-size: 4.5rem;
     text-transform: uppercase;
     color: #2f3234;
+    font-weight: 400;
     padding: 0;
     margin: 0;
     margin-bottom: 3.75rem;
@@ -573,7 +563,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin: 0rem 5.625rem;
+  margin: 1.875rem 5.625rem;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
@@ -737,10 +727,6 @@ a {
   position: relative; }
 
 .slider__main {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-flex-shrink: 0;
   -ms-flex-negative: 0;
   flex-shrink: 0;
@@ -756,6 +742,7 @@ a {
   position: absolute;
   width: 100%;
   padding: 0 5%;
+  display: none;
   opacity: 0;
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
@@ -775,6 +762,11 @@ a {
       width: 100%;
       height: 95%; } }
   .slider__main-active {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .slider__main-first {
     opacity: 1; }
 
 .slider__image {
@@ -866,7 +858,8 @@ a {
     .slider__close {
       display: block;
       padding-top: 0.625rem;
-      padding-left: 0.625rem; } }
+      padding-left: 0.625rem;
+      z-index: 100; } }
 
 .slider__table {
   display: table;
@@ -1764,7 +1757,7 @@ a {
   background: #ffffff;
   width: 90%;
   border-radius: 5px;
-  position: fixed;
+  position: absolute;
   top: 35%;
   left: 5%;
   z-index: 15;
@@ -1774,8 +1767,9 @@ a {
 
 .modal__close {
   position: absolute;
-  top: 5%;
-  right: 5%; }
+  top: 0.9375rem;
+  right: 0.9375rem;
+  z-index: 100; }
 
 .modal__title {
   font-size: 14px;
