--- a/CSS/section/style-feedback.scss
+++ b/CSS/section/style-feedback.scss
@@ -144,7 +144,7 @@
 
     border-radius: 5px;
 
-    position: fixed;
+    position: absolute;
     top: 35%; 
     left: 5%; 
     z-index: 15;
@@ -157,8 +157,9 @@
 
 .modal__close {
     position: absolute;
-    top: 5%;
-    right: 5%;
+    top: rem(15px);
+    right: rem(15px);
+    z-index: 100;
 }
 
 .modal__title {
