--- a/CSS/section/style-slider.scss
+++ b/CSS/section/style-slider.scss
@@ -30,28 +30,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // overflow: hidden;
     position: relative;
-//     align-items: center;
-//     height: 60%;
 
-    // @include tablets {
-    //     height: 80%;
-    //     width: 80%;
-//         padding: 0 rem(20px);
-//         flex-direction: column;
-//         justify-content: center;
-    // }
-
-//         @include transit2 {
-//         width: 100%;
-//         height: 95%;
-//     }
 }
 
 
 .slider__main {
-    display: flex;
+    // display: flex;
     flex-shrink: 0;
     align-items: center;
     justify-content: center;
@@ -59,8 +44,10 @@
     position: absolute;
     width: 100%;
     padding: 0 5%;
+    display: none;
     opacity: 0;
     transition: opacity 0.5s;
+    
 
     @include tablets {
         height: 80%;
@@ -76,6 +63,10 @@
     }
 
     &-active {
+        display: flex;
+    }
+
+    &-first {
         opacity: 1;
     }
 }
@@ -155,6 +146,7 @@
             display: block;
             padding-top: rem(10px);
             padding-left: rem(10px);
+            z-index: 100;
 
     }
 }
