--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -29,6 +29,7 @@
 
     &__words {
         @include gagalin(#2f3234);
+        font-weight: 400;
         padding: 0;
         margin: 0;
         margin-bottom: rem(60px);
@@ -50,7 +51,7 @@
 
 .webest-content {
     display: flex;
-    margin: rem(0px) rem(90px);
+    margin: rem(30px) rem(90px);
     justify-content: space-between;
     align-items: baseline;
 
