--- a/CSS/layout/_adjustment.scss
+++ b/CSS/layout/_adjustment.scss
@@ -2,14 +2,20 @@
     width: 100%; 
     height: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .maincontent {
     height: 100%;
     min-height: 650px;
     width: 100%;
-    // position: absolute;
+    position: absolute;
+    // transition: 1s;
+    will-change: transform;
 
+    @include tablets {
+        min-height: auto;
+    }
 }
 
 .section {
@@ -39,39 +45,39 @@
 
 /*Plugin adjustment*/
 
-.onepage-pagination {
-    top: 15%;
-    right: 5%;
+// .onepage-pagination {
+//     top: 15%;
+//     right: 5%;
 
-    li {
-        position: relative;
-    }
+//     li {
+//         position: relative;
+//     }
 
-    li a::before {
-        background: #ffffff;
-        width: 5px;
-        height: 5px;
-        margin-top: 0px;
-        left: 12px;
-    }
+//     li a::before {
+//         background: #ffffff;
+//         width: 5px;
+//         height: 5px;
+//         margin-top: 0px;
+//         left: 12px;
+//     }
 
-    li a.active::before {
-        // border: 1px solid white;
-        // background-color: transparent;
-        border: 1px solid white;
-        width: 15px;
-        height: 15px;
-    }
+//     li a.active::before {
+//         // border: 1px solid white;
+//         // background-color: transparent;
+//         border: 1px solid white;
+//         width: 15px;
+//         height: 15px;
+//     }
 
-    li a.active::after {
-        content: '';
-        position: absolute;
-        background: #ffffff;
-        border-radius: 50%;
-        width: 5px;
-        height: 5px;
-        margin-top: 1px;
-        left: 13px;
-        z-index: 100;
-    }
-}
+//     li a.active::after {
+//         content: '';
+//         position: absolute;
+//         background: #ffffff;
+//         border-radius: 50%;
+//         width: 5px;
+//         height: 5px;
+//         margin-top: 1px;
+//         left: 13px;
+//         z-index: 100;
+//     }
+// }
