--- a/CSS/main.css
+++ b/CSS/main.css
@@ -94,12 +94,18 @@ a {
 .wrapper {
   width: 100%;
   height: 100%;
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 .maincontent {
   height: 100%;
   min-height: 650px;
-  width: 100%; }
+  width: 100%;
+  position: absolute;
+  will-change: transform; }
+  @media screen and (max-width: 768px) {
+    .maincontent {
+      min-height: auto; } }
 
 .section {
   height: 100%;
@@ -136,32 +142,6 @@ a {
       width: 95%; } }
 
 /*Plugin adjustment*/
-.onepage-pagination {
-  top: 15%;
-  right: 5%; }
-  .onepage-pagination li {
-    position: relative; }
-  .onepage-pagination li a::before {
-    background: #ffffff;
-    width: 5px;
-    height: 5px;
-    margin-top: 0px;
-    left: 12px; }
-  .onepage-pagination li a.active::before {
-    border: 1px solid white;
-    width: 15px;
-    height: 15px; }
-  .onepage-pagination li a.active::after {
-    content: '';
-    position: absolute;
-    background: #ffffff;
-    border-radius: 50%;
-    width: 5px;
-    height: 5px;
-    margin-top: 1px;
-    left: 13px;
-    z-index: 100; }
-
 .greet-section {
   background: url("../IMG/texture.png") no-repeat center center, url("../IMG/texture.png") no-repeat center center, #000000 url("../IMG/video-bg.png") no-repeat center center;
   background-size: cover, cover;
@@ -2112,20 +2092,41 @@ a {
 .dots__list {
   margin-left: 30px; }
 
-.dots__item {
-  width: 5px;
-  height: 5px;
-  border-radius: 2.5px;
-  background-color: #ffffff;
-  margin-bottom: 16px;
+.dots__link {
+  width: 1rem;
+  height: 1rem;
+  display: block;
   position: relative; }
-  .dots__item:first-child::after {
+  .dots__link:after, .dots__link:before {
     content: "";
-    background-color: transparent;
-    border: 1px solid white;
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
+    display: block;
     position: absolute;
-    right: -4px;
-    top: -5px; }
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 50%; }
+  .dots__link:after {
+    width: 0.3125rem;
+    height: 0.3125rem;
+    background: #ffffff; }
+  .dots__link:before {
+    width: 0rem;
+    height: 0rem;
+    border: 0.0625rem solid #ffffff;
+    opacity: 0;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; }
+  .dots__link:hover:before {
+    width: 0.875rem;
+    height: 0.875rem;
+    opacity: 1; }
+  .dots__link_active:before {
+    width: 0.875rem;
+    height: 0.875rem;
+    opacity: 1; }
+
+.dots__item {
+  margin-bottom: 0.3125rem; }
