--- a/CSS/section/style-webest.scss
+++ b/CSS/section/style-webest.scss
@@ -20,7 +20,8 @@
 }
 
 .webest-bg {
-    justify-content: flex-start;
+    justify-content: center;
+
 }
 
 .webest-header {
@@ -33,19 +34,20 @@
         padding: 0;
         margin: 0;
         margin-bottom: rem(60px);
-        margin-top: rem(55px);
+        // margin-top: rem(55px);
 
         @include transit2 {
             font-size: rem(50px);
+            margin-bottom: rem(30px);
         }
     }
 
     @include transit {
-        margin-top: rem(55px);
+        // margin-top: rem(55px);
     }
 
     @include transit2 {
-        margin-top: rem(0px);
+        margin: rem(0px);
     }
 }
 
